--- a/index.html
+++ b/index.html
@@ -1,131 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sai Rental Collection - Availability Checker</title>
-<style>
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #fff9db;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sai Rental Collection - Availability Checker</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #fff9db;
+    }
 
-  /* Header Image */
-  .header {
-    position: relative;
-    text-align: center;
-    background-color: yellow;
-  }
-  .header img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-  .header h1 {
-    position: absolute;
-  }
+    /* Header Image */
+    .header {
+      position: relative;
+      text-align: center;
+      background-color: yellow;
+    }
 
-  /* Main Form */
-  .container {
-    max-width: 500px;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
-  }
-  h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  label {
-    display: block;
-    font-weight: bold;
-    margin: 10px 0 5px;
-    text-align: left;
-  }
-  input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 2px solid #000;
-    border-radius: 4px;
-    font-size: 1rem;
-  }
-  button {
-    background-color: rgb(247, 225, 182);
-    padding: 10px 20px;
-    border: 2px solid black;
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: 0.3s;
-  }
-  button:hover {
-    background-color: #fff158;
-  }
+    .header img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
 
-  /* Availability Message */
-  .available {
-    color: green;
-    font-weight: bold;
-    margin-top: 15px;
-  }
-  .unavailable {
-    color: red;
-    font-weight: bold;
-    margin-top: 15px;
-  }
+    .header h1 {
+      position: absolute;
+    }
 
-  /* Table Styling */
-  table {
-    border-collapse: collapse;
-    margin-top: 15px;
-    width: 100%;
-  }
-  th, td {
-    border: 1px solid black;
-    padding: 8px;
-  }
-  th {
-    background: #eee;
-  }
+    /* Main Form */
+    .container {
+      max-width: 500px;
+      margin: auto;
+      padding: 20px;
+      text-align: center;
+    }
 
-  /* Responsive */
-  @media (max-width: 600px) {
-    h1 { font-size: 1.5rem; }
-    h2 { font-size: 1.5rem; }
-    input, button { font-size: 0.9rem; }
-  }
-</style>
+    h2 {
+      font-size: 1.8rem;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      font-weight: bold;
+      margin: 10px 0 5px;
+      text-align: left;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 2px solid #000;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+
+    button {
+      background-color: rgb(247, 225, 182);
+      padding: 10px 20px;
+      border: 2px solid black;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 4px;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background-color: #fff158;
+    }
+
+    /* Availability Message */
+    .available {
+      color: green;
+      font-weight: bold;
+      margin-top: 15px;
+    }
+
+    .unavailable {
+      color: red;
+      font-weight: bold;
+      margin-top: 15px;
+    }
+
+    /* Table Styling */
+    table {
+      border-collapse: collapse;
+      margin-top: 15px;
+      width: 100%;
+    }
+
+    th,
+    td {
+      border: 1px solid black;
+      padding: 8px;
+    }
+
+    th {
+      background: #eee;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      input,
+      button {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-<!-- Header Section -->
-<div class="header">
-  <img src="SAI RENTAL COLLECTION (1).png" alt="Sai Rental Collection">
+  <!-- Header Section -->
+  <div class="header">
+    <img src="images/SAI RENTAL COLLECTION (1).png" alt="Sai Rental Collection Header" class="header-img">
 
-</div>
 
-<!-- Main Form -->
-<div class="container">
-  <h2>Check Bookings</h2>
+  </div>
+
+  <!-- Main Form -->
+  <div class="container">
+    <h2>Check Bookings</h2>
+
+    <label for="dressCode">Enter Dress Code:</label>
+
+    <input type="text" id="dressCode" placeholder="Enter code">
+
+    <label for="pickupDate">Enter Date:</label>
+    <input type="date" id="pickupDate">
+
+    <button onclick="checkAvailability()">Check Availability</button>
+    <button type="button" class="btn" style="margin-top:8px;" onclick="window.location.href='code1.html'">
+     Book Dress
+    </button>
+
+    <div id="result"></div>
+    <div id="history"></div>
+  </div>
+
+
   
-  <label for="dressCode">Enter Dress Code:</label>
-  <input type="text" id="dressCode" placeholder="Enter code">
-  
-  <label for="pickupDate">Enter Date:</label>
-  <input type="date" id="pickupDate">
-  
-  <button onclick="checkAvailability()">Check Availability</button>
-  
-  <div id="result"></div>
-  <div id="history"></div>
-</div>
 
   <script>
-    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbzDc3LxdqJCvLncPeZLjfgTIh51C8fBeryIJ5Qiy4TEruun7RCE-oxjj4oJr8cbf7nTKA/exec"; // ends with /exec
+    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyBZARgtLEBhB-dw3zE_lClkVDFim9dsJaxdR1iwOo1d8EPMUIFA0MaJ6XRfvjSvvukTA/exec"; // ends with /exec
 
     async function checkAvailability() {
       const dressCode = document.getElementById("dressCode").value.trim();
@@ -164,6 +194,14 @@
         resultEl.textContent = "Error contacting server. Check console.";
       }
     }
+      // -----------------------------------------------
+   
+
+
   </script>
+  
+
+
 </body>
+
 </html>
