--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <!-- Header Section -->
   <div class="header">
-    <img src="images/SAI RENTAL COLLECTION(1).png" alt="Sai Rental Collection Header" class="header-img">
+    <img src="Images\SAI RENTAL COLLECTION (1).png" alt="Sai Rental Collection Header" class="header-img">
 
 
   </div>
