--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
       background-color: yellow;
     }
 
-    .header img {
+.header-img {
       width: 100%;
-      height: auto;
+      max-width: 100px;
       display: block;
-    }
+      margin: 10px auto 50px auto;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+  
+}
 
     .header h1 {
       position: absolute;
@@ -126,7 +129,7 @@
 
   <!-- Header Section -->
   <div class="header">
-    <img src="Images\SAI RENTAL COLLECTION (1).png" alt="Sai Rental Collection Header" class="header-img">
+    <img src="images/SAI RENTAL COLLECTION (1).png" alt="Sai Rental Collection Header" class="header-img">
 
 
   </div>
@@ -155,7 +158,7 @@
   
 
   <script>
-    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyBZARgtLEBhB-dw3zE_lClkVDFim9dsJaxdR1iwOo1d8EPMUIFA0MaJ6XRfvjSvvukTA/exec"; // ends with /exec
+    const BACKEND_URL = "https://script.google.com/macros/s/AKfycbxg1k_bPio6cHGuZ8oLxPuoK_JwArB9gqHrgc0_bqlI-qxfQpzKNNe9INhrvw5DDXUKWA/exec"; // ends with /exec
 
     async function checkAvailability() {
       const dressCode = document.getElementById("dressCode").value.trim();
