--- a/code1.html
+++ b/code1.html
@@ -112,7 +112,7 @@
       </div>
 
       <label for="Adhaar">Aadhaar Number:</label>
-      <input type="text" id="aadhaarNumber" name="aadhaarNumber" maxlength="12" required>
+      <input type="number" id="aadhaarNumber" name="aadhaarNumber" maxlength="12" required>
 
 
       <label for="bookingDate">Booking Date:</label>
